# Learning-Projects

./: README.md
.github/workflows/: c-cpp.yml
beginner/cassino_number_guessing/: CMakeLists.txt
beginner/cassino_number_guessing/src/: main.cc
beginner/cgpa_calculator/: CMakeLists.txt  grades.csv  subjects.csv
beginner/cgpa_calculator/src/: main.cc
beginner/login_and_registration_system/: CMakeLists.txt  database.csv  database_design.md
beginner/login_and_registration_system/src/: log.h  main.cc
beginner/rock_paper_scissor/: CMakeLists.txt
beginner/rock_paper_scissor/src/: main.cc
beginner/scientific_calculator/: CMakeLists.txt
beginner/scientific_calculator/src/: main.cc
